k8s/permissive-cluster-role-binding.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky
  labels:
    app: tasky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      serviceAccountName: tasky-sa
      containers:
      - name: tasky
        image: docker.io/caseykurosawa/tasky:latest
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "64Mi"
            cpu: "200m"
