k8s/envoy-gateway-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    # - name: https-tasky
    #   protocol: HTTPS
    #   port: 443
    #   hostname: tasky.ckurosawa.com
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #     - kind: Secret
    #       group: ""
    #       name: app-example-com-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "tasky.ckurosawa.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tasky
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
